--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,28 @@
 [package]
 name = "cornefirmware"
 version = "0.1.0"
-edition = "2024"
+edition = "2021"
+license = "MIT OR Apache-2.0"
 
 [dependencies]
+log = { version = "0.4.22" }
+xtensa-lx-rt = { version = "0.16.0", features = ["esp8266"] }
+xtensa-lx = { version = "0.7.0", features = ["esp8266"] }
+panic-halt = "0.2.0"
+esp8266-hal = { version = "0.5.0" }
+esp8266 = "0.6.0"
+embedded-hal = { version = "0.2.4", features = ["unproven"] }
+
+[profile.dev]
+# Rust debug is too slow.
+# For debug builds always builds with some optimization
+opt-level = "s"
+
+[profile.release]
+codegen-units = 1 # LLVM can perform better optimizations using a single thread
+debug = 2
+debug-assertions = false
+incremental = false
+lto = 'fat'
+opt-level = 's'
+overflow-checks = false
